--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,25 +1,20 @@
-PORT = 
-NODE_ENV = 
-FRONTEND_URL =
+PORT = 4000
+NODE_ENV = DEVELOPMENT
+FRONTEND_URL = 'http://localhost:3000'
+DB_LOCAL_URI = mongodb://localhost:27017/shopit
+DB_URI = mongodb+srv://sandeep:pansandeep3052@shopit.z42i2.mongodb.net/shopIt
 
-DB_LOCAL_URI = 
-DB_URI = 
+JWT_SECRET = LSKJDFLSKDJFLSKDFJSDSLKJDFLSKJDLFSD;
+JWT_EXPIRES_TIME = 7D
+COOKIE_EXPIRES_TIME = 7
 
-JWT_SECRET = 
-JWT_EXPIRES_TIME = 
-COOKIE_EXPIRES_TIME = 
-
-CLOUDINARY_CLOUD_NAME = 
-CLOUDINARY_API_KEY = 
-CLOUDINARY_API_SECRET = 
-
-STRIPE_SECRET_KEY = 
-STRIPE_API_KEY = 
-
+CLOUDINARY_CLOUD_NAME=dy0nyhvyf
+CLOUDINARY_API_KEY=272228375571951
+CLOUDINARY_API_SECRET=AtB-Fm86cRhYA_RZJ-kSja74jNQ
 
 SMTP_HOST = smtp.mailtrap.io
-SMTP_PORT = 2525
-SMTP_EMAIL = 
-SMTP_PASSWORD = 
-SMTP_FROM_EMAIL = 
-SMTP_FROM_NAME = 
+SMTP_POST = 2525
+SMTP_EMAIL = 0c3923335304fc
+SMTP_PASSWORD = efe4e492497b74
+SMTP_FROM_EMAIL = noreply@shopit.com
+SMTP_FROM_NAME = ShopIt
